# QALMA

./: .travis.yml  CHANGES  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: isort-and-black-checks.yml  qutip5.yml  ubuntu.yml
docs/: conf.py  index.rst  make_docs.py  quickstart.rst  running.rst  what-is-qalma.rst
docs/guide/: guide.rst
docs/user/: evolution.rst  examples.rst  index.rst  models.rst  states.rst  systems.rst
examples/: Loop operators.ipynb  Show graphics.ipynb  example_heisenberg_evolution.ipynb  example_maxent_evolution.ipynb  examples.py  init_notebook.py  test_paper2.py
qalma/: __init__.py  alpsmodels.py  geometry.py  model.py  parallel.py  proj_evol.py  restricted_maxent_toolkit.py  settings.py  utils.py
qalma/evolution/: __init__.py  heisenberg_solver.py  hierarchical_basis.py  maxent_evol.py  qutip_solver.py  series_solver.py  simulation.py  tools.py
qalma/lib/: lattices.xml  models.xml
qalma/maxent/: __main__.py
qalma/meanfield/: __init__.py  gibbs_partial_trace.py  meanfield.py  self_consistent_projections.py  variational.py
qalma/operators/: __init__.py  arithmetic.py  basic.py  qutip.py  register_ops.py  simplify.py
qalma/projections/: __init__.py  nbody.py  symmetries.py
qalma/qutip_tools/: tools.py
qalma/scalarprod/: __init__.py  basis.py  build.py  gram.py  orthogonalize.py  utils.py
source/: conf.py  index.rst
test/: compare_benchmarks.py  helper.py  set_benchmark_reference.py  test_arithmetic_operators.py  test_hermiticity.py  test_qutip.py  test_serialize.py  test_simplify.py  test_systems.py
test/basic_operators/: test_operator_functions.py  test_operator_functions.py~  test_operator_functions_benchmarks.py  test_operators.py  (+1 more)
(+33 files in other folders)
